--- a/style.css
+++ b/style.css
@@ -89,6 +89,9 @@ hr {
   overflow: visible;
 }
 
+.frst {
+  padding-top: 5%;
+}
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
@@ -517,6 +520,14 @@ mark,
   color: #919aa1;
 }
 
+.contactbg{
+    background-image:    url(warsaw.jpeg);
+    background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center; 
+	padding:1rem;
+}
+
 code {
   font-size: 87.5%;
   color: #e83e8c;
@@ -606,7 +617,7 @@ pre code {
       flex-wrap: wrap;
   margin-right: 15px;
   margin-left: 15px;
-  margin-top: 5rem;
+  margin-top: 2rem;
 }
 
 .no-gutters {
@@ -4226,7 +4237,7 @@ input[type="button"].btn-block {
 }
 
 .navbar {
-  position: relative;
+  position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4238,7 +4249,11 @@ input[type="button"].btn-block {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1.5rem 1rem;
+  top: 0;
+  z-index: 100;
+  position: fixed;
+  width: 100%;
+  height: 70px;
 }
 
 .navbar > .container,
